--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,8 +8,8 @@
     --main-dark-color: rgb(0, 0, 0);
     --checkbox-color: rgb(0, 128, 0);
     --header-background-color: rgb(219, 76, 63);
-    --nav-background-color: rgb(245, 245, 245);
-    --nav-hover-color: rgb(238, 238, 238);
+    --nav-background-color: rgb(240, 240, 240);
+    --nav-hover-color: rgb(229, 229, 229);
 }
 
 * {
@@ -17,10 +17,13 @@
     font-family: 'Noto Sans', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
-ul,
-h2, h3, p {
+ul, h2, h3{
     padding: 0;
     margin: 0;
+}
+
+span {
+    font-size: 1rem;
 }
 
 ul, li {
@@ -44,7 +47,7 @@ button {
     grid-template-areas: 
     'header'
     'main';
-    min-height: 100vh;
+    height: 100vh;
 }
 
 header {
@@ -68,7 +71,7 @@ nav {
     background-color: var(--nav-background-color)
 }
 
-li:not(.selectMenu li, .taskForm li, .dropdown li) {
+/* li:not(.selectMenu li, .taskForm li, .dropdown li) {
     display: grid;
     grid-template: auto / 6fr 1fr;
     grid-template-areas: 'firstChild lastChild';
@@ -76,13 +79,9 @@ li:not(.selectMenu li, .taskForm li, .dropdown li) {
     align-items: center;
     border-radius: 5px;
     padding: 5px 15px;
-}
+} */
 
-nav ul {
-    margin: 10px 0;
-}
-
-li > :nth-child(1){
+/* li > :nth-child(1){
     position: relative;
     grid-area: firstChild;
 }
@@ -90,62 +89,46 @@ li > :nth-child(1){
 li > :nth-child(2){
     justify-self: center;
     grid-area: lastChild;
-}
+} */
 
-.menu .title,
-.products .title,
-.productList .title,
-.taskList li {
-    cursor: pointer;
-    padding: 10px 0;
-}
 
-.title {
+/* .title {
     display: flex;
     align-items: center;
     column-gap: 10px;
     align-content: center;
-}
+} */
 
-.menu li:hover,
-.products button:hover,
+/* .menu li:hover, */
+/* .products button:hover,
 .selectMenu li:hover,
 .colorList li:hover,
 .dropdown li:hover {
     background-color: var(--nav-hover-color);
-}
+} */
 
-.menu .title::before,
-.products .title::before,
-.selectMenu .title::before,
-.option > .title
-{
+/* .menu .title::before, */
+/* .products .title::before, */
+/* .selectMenu .title::before */
+/* .option > .title */
+/* {
     content: '';
     width: 25px;
     height: 25px;
     background-size: cover;
-}
+} */
 
-.products.right .title::before {
+/* .products.right .title::before {
     background-image: url('../img/chevron-right.svg');
 }
 
 .products.down .title::before {
     background-image: url('../img/chevron-down.svg');
-}
+} */
 
-.productList {
-    max-height: 0;
-    overflow: hidden;
-    transition: max-height .15s ease-out;
-}
 
-.products.down + .productList {
-    max-height: 500px;
-    transition: max-height .2s ease-in;
-}
 
-li.box > .title::before,
+/* li.box > .title::before,
 li.box .wrap > .title::before {
     background-image: url('../img/box.png');
 }
@@ -161,53 +144,38 @@ li.completed > .title::before {
 }
 li.flag .title::before {
     background-image: url('../img/flag.png');
-}
+} */
 
-.products button,
+/* .products button,
 .total {
     padding: 0 10px;
     border-radius: 10px;
-}
+} */
 
-.products button:hover,
-.top>button:hover,
-.option button:not(.selectMenu button):hover,
-.productList .wrap>button:hover {
-    opacity: 1;
-}
 
-.products button,
-.top>button,
-.option button:not(.selectMenu button),
-.productList .wrap>button {
-    font-size: 1.5rem;
-    opacity: .5;
-    vertical-align: middle;
-}
-
-.productList .title::before,
-.colorButton::before,
-.dropdown .title::before,
-.productNameSelect li:nth-child(n+3) .title::before {
+/* .productList .title::before, */
+/* .colorHexCode .wrap > .title::before,
+.productNameSelect li:nth-child(n+3) .title::before
+{
     content: '';
     border-radius: 100%;
     background-color: var(--color-list);
     width: 10px;
     height: 10px;
     margin: 0 7.5px;
-}
+} */
 
 
-.productList .wrap > button {
+/* .productList .wrap > button {
     display: none;
-}
+} */
 
-.wrap {
+/* .wrap {
     position: relative;
-}
+} */
 
 
-.selectMenu { 
+/* .selectMenu { 
     display: none;
     position: absolute;
     border: 1px solid var(--main-dark-color);
@@ -219,84 +187,12 @@ li.flag .title::before {
     overflow: hidden;
     transform: translateX(-50%);
     z-index: 1;
-}
-
-.content {
-    grid-area: content;
-    padding: 30px 10%;
-    overflow: scroll;
-    position: relative;
-}
+} */
 
 
 
-.top .wrap {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-}
 
-.top .wrap > button {
-    font-size: 2rem;
-}
-
-.taskList {
-    margin: 30px 0;
-}
-
-
-/* custom checkbox */
-.taskList input[type="checkbox"] {
-    appearance: none;
-    position: absolute;
-    right: 100%;
-    top: 50%;
-    transform: translateY(-50%);
-    margin-right: 15px;
-    width: 25px;
-    height: 25px;
-    border: 2px solid var(--main-dark-color);
-    border-radius: 50px;
-    display: grid;
-    place-content: center;
-    cursor: pointer;
-}
-
-.taskList input[type="checkbox"]::before {
-    content: "";
-    width: 20px;
-    height: 20px;
-    transform: scale(0);
-    transition: 120ms transform ease-in-out;
-    background-image: url('../img/check.png');
-    background-size: cover;
-}
-
-.taskList input[type="checkbox"]:checked::before {
-    transform: scale(.9);
-    filter: invert(21%) sepia(98%) saturate(4405%) hue-rotate(109deg) brightness(95%) contrast(102%);
-}
-
-.taskList input[type="checkbox"]:checked {
-    border-color: var(--checkbox-color);
-}
-
-.taskList input[type="checkbox"]:hover {
-    outline: 2px solid currentColor;
-    outline-offset: 2px;
-}
-
-.taskList li.item {
-    border-bottom: 1px solid var(--main-dark-color);
-    border-radius: 0;
-    padding: 20px;
-}
-
-.taskForm .title {
-    padding: 15px 20px;
-    width: 100%;
-}
-
+/* 
 .task p:nth-of-type(1) {
     margin: 20px 0;
 }
@@ -308,13 +204,6 @@ li.flag .title::before {
     transform: translate(-50%, -50%);
 }
 
-.option {
-    display: none;
-    align-self: flex-start;
-    align-items: center;
-    column-gap: 20px;
-}
-
 .item:hover .total {
     display: none;
 }
@@ -323,53 +212,74 @@ li.flag .title::before {
     display: none;
 }
 
-.productList .item:hover  .wrap > button {
+/* .productList .item:hover  .wrap > button {
     display: flex;
 }
 
 .productList .item.showSelectMenu  .wrap > button {
     display: flex;
-}
+} */
 
-.item.showSelectMenu .selectMenu {
+/* .item.showSelectMenu .selectMenu {
     display: block;
-}
+} */
 
-.item:hover .option {
+/* .item:hover .option {
     display: flex;
 }
 
 .item.showSelectMenu .option {
     display: flex;
-}
+} */
 
-.item.showSelectMenu .selectMenuButton {
+/* .item.showSelectMenu .selectMenuButton {
     opacity: 1;
+} */
+
+
+
+
+/* 
+.selectButton .wrap > button{
+    border: 1px solid var(--main-dark-color);
 }
 
-.overlay {
-    position: fixed;
-    display: none;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    z-index: 1;
-    justify-content: center;
-    align-items: flex-start;
+.selectButton .wrap > button {
+    border-radius: 10px;
+    padding: 5px 10px;
+    background-color: var(--main-color)
 }
 
-.overlay.showForm{
-    display: flex;
-    background-color: rgba(0, 0, 0, .2);
+.selectButton .title::before {
+    content: '';
+    width: 20px;
+    height: 20px;
+    background-size: cover;
 }
 
-.overlay.showForm .taskForm.active,
-.overlay.showForm .productForm.active {
-    display: block;
-}
+.selectButton .wrap>button:hover,
+.submitButton>button:hover {
+    filter: brightness(80%);
+} */
 
-.taskForm {
+
+
+/* flag color */
+/* .selectButton>li:nth-child(2) .title.critical::before {
+    filter: invert(32%) sepia(68%) saturate(1344%) hue-rotate(333deg) brightness(94%) contrast(90%);
+}
+.selectButton>li:nth-child(2) .title.high::before{
+    filter: invert(48%) sepia(95%) saturate(1851%) hue-rotate(10deg) brightness(106%) contrast(94%);
+}
+.selectButton>li:nth-child(2) .title.medium::before{
+    filter: invert(34%) sepia(93%) saturate(2503%) hue-rotate(205deg) brightness(92%) contrast(89%);
+}
+.selectButton>li:nth-child(2) .title.low::before{
+    filter: invert(65%) sepia(12%) saturate(2183%) hue-rotate(87deg) brightness(106%) contrast(82%);
+} */
+
+
+/* .taskForm {
     display: none;
     width: 600px;
     padding: 30px;
@@ -386,54 +296,13 @@ li.flag .title::before {
     overflow-y: hidden;
 }
 
-.selectButton .wrap > button{
-    border: 1px solid var(--main-dark-color);
-}
-
-.selectButton .wrap > button,
-.submitButton > button {
-    border-radius: 10px;
-    padding: 5px 10px;
-    background-color: var(--main-color)
-}
-
-.selectButton .title::before {
-    content: '';
-    width: 20px;
-    height: 20px;
-    background-size: cover;
-}
-
-.selectButton .wrap>button:hover,
-.submitButton>button:hover {
-    filter: brightness(80%);
-}
-
-.selectButton>li:nth-child(2) .title.critical::before {
-    filter: invert(32%) sepia(68%) saturate(1344%) hue-rotate(333deg) brightness(94%) contrast(90%);
-}
-.selectButton>li:nth-child(2) .title.high::before{
-    filter: invert(48%) sepia(95%) saturate(1851%) hue-rotate(10deg) brightness(106%) contrast(94%);
-}
-.selectButton>li:nth-child(2) .title.medium::before{
-    filter: invert(34%) sepia(93%) saturate(2503%) hue-rotate(205deg) brightness(92%) contrast(89%);
-}
-.selectButton>li:nth-child(2) .title.low::before{
-    filter: invert(65%) sepia(12%) saturate(2183%) hue-rotate(87deg) brightness(106%) contrast(82%);
+.taskForm .title {
+    padding: 15px 20px;
+    width: 100%;
 }
 
 
-.submitButton .cancelButton {
-    background-color: var(--nav-background-color)
-}
-
-.submitButton .addButton {
-    color: var(--main-color);
-    background-color: var(--header-background-color)
-}
-
-
-.buttons {
+.taskForm .buttons {
     display: grid;
     grid-template: 1fr 1fr / auto 1fr 1fr;
     grid-template-areas: 
@@ -443,50 +312,73 @@ li.flag .title::before {
     gap: 20px 10px;
 }
 
-.datePicker {
+.taskForm .datePicker {
     grid-area: datePicker;
     
 }
 
 
-.timePicker {
+.taskForm .timePicker {
     display: none;
     grid-area: timePicker;
 }
 
-.timePicker.active {
+.taskForm .timePicker.active {
     display: block;
 }
 
-.selectButton {
+.taskForm .selectButton {
     grid-area: selectButton;
 }
 
-.submitButton {
+.taskForm .submitButton {
     justify-content: flex-end;
     grid-area: submitButton;
 }
 
-.selectButton,
-.submitButton {
+.taskForm .selectButton {
     display: flex;
     column-gap: 10px;
 }
 
-input[type="date"],
-input[type="time"] {
+.taskForm input[type="date"],
+.taskForm input[type="time"] {
     width: 100%;
     appearance: none;
     border: 0;
 }
 
-input[type="time"]:focus,
-input[type="date"]:focus {
+.taskForm input[type="time"]:focus,
+.taskForm input[type="date"]:focus {
     outline: none;
 }
 
 
 
+.taskForm label {
+    margin-bottom: 30px;
+    display: flex;
+    flex-direction: column;
+    font-size: 1.2rem;
+}
+
+.taskForm textarea {
+    margin-top: 10px;
+    border: 0;
+    border-bottom: 1px solid var(--main-dark-color);
+    min-height: 1.8rem;
+    padding: 5px;
+}
+
+.taskForm textarea.disableOutline {
+    outline: 0;
+} */
+
+
+
+
+
+/* ---------------------------------------------------- */
 
 /* nav block */
 nav .wrap {
@@ -571,6 +463,7 @@ li.flag .title::before {
 
 .content .title {
     flex: 1;
+    overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
 }
@@ -595,14 +488,93 @@ li.flag .title::before {
     font-size: 2rem;
 }
 
-.top .option {
+.top .optionButton {
     cursor: pointer;
     flex: 0 1 25px;
     margin-left: 20px;
     text-align: center;
 }
 
+/* taskList block */
+
+.taskList {
+    margin: 30px 0;
+}
+
+.taskList .item {
+    border-bottom: 1px solid var(--main-dark-color);
+    border-radius: 0;
+    padding: 0 10px;
+    margin: 20px 0;
+    position: relative;
+    cursor: pointer;
+}
+
+
+.taskList .optionButton {
+    display: none;
+    cursor: pointer;
+    flex: 0 1 25px;
     text-align: center;
+    color: rgb(160, 160, 160);
+}
+.taskList .item:hover .optionButton {
+    display: block;
+}
+
+.taskList .option.active .optionButton{
+    display: block;
+    color: rgb(0, 0, 0);
+}
+
+.taskList .optionButton:hover {
+    color: rgb(0, 0, 0);
+}
+
+
+/* task checkbox block */
+.taskList .item input[type="checkbox"] {
+    appearance: none;
+    position: absolute;
+    right: 100%;
+    top: 50%;
+    transform: translateY(-50%);
+    margin-right: 15px;
+    width: 25px;
+    height: 25px;
+    border: 2px solid var(--main-dark-color);
+    border-radius: 50px;
+    display: grid;
+    place-content: center;
+    cursor: pointer;
+}
+
+.taskList .item input[type="checkbox"] {
+    border-color: blueviolet;
+}
+
+.taskList .item input[type="checkbox"]::before {
+    content: "";
+    width: 20px;
+    height: 20px;
+    transform: scale(0);
+    transition: 120ms transform ease-in-out;
+    background-image: url('../img/check.png');
+    background-size: cover;
+}
+
+.taskList .item input[type="checkbox"]:checked::before {
+    transform: scale(.9);
+    filter: invert(21%) sepia(98%) saturate(4405%) hue-rotate(109deg) brightness(95%) contrast(102%);
+}
+
+.taskList .item input[type="checkbox"]:checked {
+    border-color: var(--checkbox-color);
+}
+
+.taskList .item input[type="checkbox"]:hover {
+    outline: 2px solid currentColor;
+    outline-offset: 2px;
 }
 
 
@@ -669,14 +641,14 @@ li.products.arrowDown .icon {
     text-overflow: ellipsis;
 }
 
-.productList .option {
+.productList .optionButton {
     cursor: pointer;
     flex: 0 1 25px;
     text-align: center;
     color: rgb(160, 160, 160);
 }
 
-.productList .option:hover {
+.productList .optionButton:hover {
     color: rgb(0, 0, 0);
 }
 
