--- a/src/css/style.css
+++ b/src/css/style.css
@@ -264,116 +264,6 @@ li.flag .title::before {
 
 
 
-/* flag color */
-/* .selectButton>li:nth-child(2) .title.critical::before {
-    filter: invert(32%) sepia(68%) saturate(1344%) hue-rotate(333deg) brightness(94%) contrast(90%);
-}
-.selectButton>li:nth-child(2) .title.high::before{
-    filter: invert(48%) sepia(95%) saturate(1851%) hue-rotate(10deg) brightness(106%) contrast(94%);
-}
-.selectButton>li:nth-child(2) .title.medium::before{
-    filter: invert(34%) sepia(93%) saturate(2503%) hue-rotate(205deg) brightness(92%) contrast(89%);
-}
-.selectButton>li:nth-child(2) .title.low::before{
-    filter: invert(65%) sepia(12%) saturate(2183%) hue-rotate(87deg) brightness(106%) contrast(82%);
-} */
-
-
-/* .taskForm {
-    display: none;
-    width: 600px;
-    padding: 30px;
-    margin-top: 10%;
-    background-color: var(--main-color);
-    border-radius: 10px;
-    box-shadow: 0px 3px 10px 10px rgba(0, 0, 0, .1);
-}
-
-
-.taskForm textarea {
-    font-size: 1rem;
-    resize: none;
-    overflow-y: hidden;
-}
-
-.taskForm .title {
-    padding: 15px 20px;
-    width: 100%;
-}
-
-
-.taskForm .buttons {
-    display: grid;
-    grid-template: 1fr 1fr / auto 1fr 1fr;
-    grid-template-areas: 
-    'datePicker selectButton ............'
-    'timePicker ............ submitButton';
-    align-items: center;
-    gap: 20px 10px;
-}
-
-.taskForm .datePicker {
-    grid-area: datePicker;
-    
-}
-
-
-.taskForm .timePicker {
-    display: none;
-    grid-area: timePicker;
-}
-
-.taskForm .timePicker.active {
-    display: block;
-}
-
-.taskForm .selectButton {
-    grid-area: selectButton;
-}
-
-.taskForm .submitButton {
-    justify-content: flex-end;
-    grid-area: submitButton;
-}
-
-.taskForm .selectButton {
-    display: flex;
-    column-gap: 10px;
-}
-
-.taskForm input[type="date"],
-.taskForm input[type="time"] {
-    width: 100%;
-    appearance: none;
-    border: 0;
-}
-
-.taskForm input[type="time"]:focus,
-.taskForm input[type="date"]:focus {
-    outline: none;
-}
-
-
-
-.taskForm label {
-    margin-bottom: 30px;
-    display: flex;
-    flex-direction: column;
-    font-size: 1.2rem;
-}
-
-.taskForm textarea {
-    margin-top: 10px;
-    border: 0;
-    border-bottom: 1px solid var(--main-dark-color);
-    min-height: 1.8rem;
-    padding: 5px;
-}
-
-.taskForm textarea.disableOutline {
-    outline: 0;
-} */
-
 
 
 
@@ -409,6 +299,15 @@ nav .wrap {
     background-color: var(--nav-hover-color);
 }
 
+.menu .taskCount {
+    flex: 0 1 25px;
+    text-align: center;
+}
+
+
+
+/* icon block */
+
 .icon {
     cursor: pointer;
     width: 25px;
@@ -416,42 +315,34 @@ nav .wrap {
     background-size: cover;
 }
 
-li.box .icon {
+.icon.box {
     background-image: url('../img/box.png');
 }
 
-li.order .icon {
+.icon.order {
     background-image: url('../img/order.png');
 }
 
-li.calendar .icon {
+.icon.calendar {
     background-image: url('../img/calendar.png');
 }
 
-/* li.order>.title::before,
-li.order .wrap>.title::before {
-    background-image: url('../img/order.png');
-}
-
-li.calendar>.title::before {
-    background-image: url('../img/calendar.png');
-}
-
-li.completed>.title::before {
-    background-image: url('../img/completed.png');
-}
-
-li.flag .title::before {
+.icon.flag {
     background-image: url('../img/flag.png');
-} */
-
-
-
-
-.taskCount{
-    flex: 0 1 25px;
-    text-align: center;
 }
+.icon.flag.critical {
+    filter: invert(32%) sepia(68%) saturate(1344%) hue-rotate(333deg) brightness(94%) contrast(90%);
+}
+.icon.flag.high {
+    filter: invert(48%) sepia(95%) saturate(1851%) hue-rotate(10deg) brightness(106%) contrast(94%);}
+.icon.flag.medium {
+    filter: invert(34%) sepia(93%) saturate(2503%) hue-rotate(205deg) brightness(92%) contrast(89%);
+}
+.icon.flag.low {
+    filter: invert(65%) sepia(12%) saturate(2183%) hue-rotate(87deg) brightness(106%) contrast(82%);
+}
+
+
 
 /* content block */
 
@@ -494,6 +385,91 @@ li.flag .title::before {
     margin-left: 20px;
     text-align: center;
 }
+
+/* taskForm block */
+
+.taskForm {
+    display: none;
+    width: 600px;
+    padding: 30px;
+    margin-top: 10%;
+    background-color: var(--main-color);
+    border-radius: 10px;
+    box-shadow: 0px 3px 10px 10px rgba(0, 0, 0, .1);
+}
+
+.taskForm label {
+    font-size: 1.2rem;
+}
+
+.taskForm textarea {
+    margin-top: 10px;
+    border: 0;
+    border-bottom: 1px solid var(--main-dark-color);
+    min-height: 1.8rem;
+    padding: 5px;
+    font-size: 1rem;
+    resize: none;
+    overflow-y: hidden;
+    width: 100%;
+    margin-bottom: 30px;
+}
+
+.taskForm textarea.disableOutline {
+    outline: 0;
+}
+
+.taskForm .option > button{
+    padding: 5px 10px;
+    border: 1px solid var(--main-dark-color);
+    border-radius: 10px;
+    margin-left: 10px;
+}
+
+
+/* taskFormButtons block */
+
+.taskFormButtons {
+    display: flex;
+}
+
+.taskFormButtons input:hover {
+    background-color: var(--nav-background-color)
+}
+
+.taskFormButtons input {
+    cursor: pointer;
+    appearance: none;
+    border: 1px solid black;
+    background-color: transparent;
+    border-radius: 10px;
+    padding: 5px 10px;
+}
+
+.taskFormButtons input[type="time"] {
+    letter-spacing: 1px;
+    margin-left: 10px;
+}
+
+.taskFormButtons input:focus{
+    outline: none;
+}
+
+.taskFormButtons .option button {
+    display: flex;
+    align-items: center;
+}
+
+
+.taskFormButtons .option button:hover {
+    background-color: var(--nav-background-color)
+}
+
+.taskFormButtons .option .icon {
+    margin-right: 5px;
+    display: inline-block;
+}
+
 
 /* taskList block */
 
@@ -587,6 +563,7 @@ li.flag .title::before {
 }
 
 .products.arrowDown + .productList {
+    max-height: 300px;
     height: 300px;
     transition: max-height .2s ease-in;
 }
@@ -616,7 +593,7 @@ li.products.arrowDown .icon {
 /* productList block */
 
 .productList {
-    height: 0;
+    max-height: 0;
     overflow: hidden;
     transition: max-height .15s ease-out;
 }
@@ -821,7 +798,16 @@ li.products.arrowDown .icon {
     background-color: var(--nav-background-color)
 }
 
+.submitButton .cancel:hover {
+    background-color: var(--main-dark-color);
+    color: var(--nav-background-color);
+}
+
 .submitButton .submit {
     color: var(--main-color);
     background-color: var(--header-background-color)
+}
+
+.submitButton .submit:hover {
+    color: var(--main-dark-color);
 }
