Add Task Dropdown style

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -419,22 +419,13 @@ nav .wrap {
     outline: 0;
 }
 
-.taskForm .option > button{
-    padding: 5px 10px;
-    border: 1px solid var(--main-dark-color);
-    border-radius: 10px;
-    margin-left: 10px;
-}
-
 
 /* taskFormButtons block */
 
 .taskFormButtons {
     display: flex;
-}
-
-.taskFormButtons input:hover {
-    background-color: var(--nav-background-color)
+    gap: 10px;
+    flex-wrap: wrap;
 }
 
 .taskFormButtons input {
@@ -446,28 +437,59 @@ nav .wrap {
     padding: 5px 10px;
 }
 
+.taskFormButtons input:hover {
+    background-color: var(--nav-background-color)
+}
+
 .taskFormButtons input[type="time"] {
     letter-spacing: 1px;
-    margin-left: 10px;
 }
+
 
 .taskFormButtons input:focus{
     outline: none;
 }
 
-.taskFormButtons .option button {
+.taskFormButtons .dropdown {
+    position: relative;
+}
+
+.taskFormButtons .dropdown .dropDownButton {
+    padding: 5px 10px;
+    border: 1px solid var(--main-dark-color);
+    border-radius: 10px;
+}
+
+
+/* dropdownList block */
+
+.taskFormButtons .dropdownList {
+    position: absolute;
+    max-height: 0;
+    top: 100%;
+    left: 0px;
+    overflow: hidden;
+    z-index: 1;
+}
+
+.taskFormButtons .dropDownButton.showList+.dropdownList {
+    max-height: 1000px;
+    border: 0;
+    transition: max-height .1s ease-in;
+}
+
+.taskFormButtons .dropdownList ul {
+    height: 100%;
+    background-color: var(--main-color);
+    overflow-y: scroll;
+    box-shadow: 0px 0px 10px 10px rgb(0 0 0 / 10%);
     display: flex;
-    align-items: center;
+    flex-direction: column;
+    border: .5px solid var(--main-dark-color);
 }
 
-
-.taskFormButtons .option button:hover {
-    background-color: var(--nav-background-color)
-}
-
-.taskFormButtons .option .icon {
-    margin-right: 5px;
-    display: inline-block;
+.taskFormButtons .dropdownList .item:hover {
+    background-color: var(--nav-hover-color);
 }
 
 
