--- a/src/css/style.css
+++ b/src/css/style.css
@@ -786,34 +786,39 @@ li.products.arrowRight.arrowDown .icon {
     transition: max-height .1s ease-in;
 }
 
+.productForm .colorButton + .dropdownList>ul {
+    border-radius: 0 0 5px 5px;
+    border-top: 0;
+}
+
 
 /* dropdown block */
 
-.dropdown {
+.productForm .dropdown {
     position: relative;
+    flex: 1;
 }
 
 /* dropdownList block */
 
-.dropdownList {
+.productForm .dropdownList {
     position: absolute;
     max-height: 0;
+    top: 100%;
     height: 100px;
     width: 100%;
     overflow: hidden;
     transition: max-height .15s ease-out;
 }
-.dropdownList > ul {
+.productForm .dropdownList > ul {
     background-color: var(--main-color);
     height: 100%;
     overflow-y: scroll;
     display: flex;
     flex-direction: column;
-    border-radius: 0 0 5px 5px;
     border: 1px solid var(--main-dark-color);
-    border-top: 0;
 }
-.dropdownList .item:hover {
+.productForm .dropdownList .item:hover {
     background-color: var(--nav-hover-color);
 }
 
