Update productList style

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -615,8 +615,9 @@ li.products.arrowRight.arrowDown .icon {
 
 .productList {
     max-height: 0;
+    height: 0;
     overflow: hidden;
-    transition: max-height .15s ease-out;
+    transition: max-height .15s ease-out, height .15s ease-out;
 }
 
 .productList > ul {
