--- a/src/css/style.css
+++ b/src/css/style.css
@@ -594,6 +594,24 @@ nav .wrap {
     color: rgb(0, 0, 0);
 }
 
+.taskList .dueDate {
+    display: inline-flex;
+    border: 1px solid black;
+    background-color: transparent;
+    border-radius: 10px;
+    padding: 3px 5px;
+    margin-top: 0;
+    align-items: center;
+    column-gap: 5px;
+    margin-bottom: 10px;
+    background-color: var(--nav-background-color)
+}
+
+.taskList .dueDate .icon {
+    width: .8rem;
+    height: .8rem;
+}
+
 
 /* task checkbox block */
 .taskList .item input[type="checkbox"] {
