--- a/src/css/style.css
+++ b/src/css/style.css
@@ -401,7 +401,7 @@ nav .wrap {
 
 .taskForm label {
     font-size: 1.2rem;
-    margin-bottom: 30px;
+    margin: 30px 0;
     display: block;
 }
 
