--- a/src/css/style.css
+++ b/src/css/style.css
@@ -570,6 +570,7 @@ nav .wrap {
 .tasksList .title {
     flex: 1;
     overflow-wrap: anywhere;
+    white-space: pre-wrap;
 }
 
 .tasksList .optionButton {
